tests222/tests2/test325.out
lli: <stdin>:1:1: error: expected top-level entity
line 4: variable nottrue is not defined
^
